--- a/styles/partials/layout.scss
+++ b/styles/partials/layout.scss
@@ -1,8 +1,8 @@
 /*layout*/
 
-body {
-  width:100%;
-  max-width: 3840px;
+html body {
+  width: 100%;
+  max-width: 1920px;
   height: auto;
   margin: 0;
 }
@@ -134,7 +134,7 @@ footer {
   animation: thing 0.1s;
   animation-iteration-count: 5;
   text-align: left;
- }
+}
 
 /*footer + animation mentions/mail*/
 
