--- a/styles/partials/maquette.scss
+++ b/styles/partials/maquette.scss
@@ -1,9 +1,187 @@
 /*index*/
-/*header index*/
-html {
-  height: auto;
+@media screen and (max-width: 2160px){
+
+  .menu img:hover {
+    width: 100%;
+    /* L'image est grossie de 15% */
+    -webkit-transform: scale(1.15);
+    /* Safari et Chrome */
+    -moz-transform: scale(1.15);
+    /* Firefox */
+    -ms-transform: scale(1.15);
+    /* Internet Explorer 9 */
+    -o-transform: scale(1.15);
+    /* Opera */
+    transform: scale(1.15);
+    -moz-transition: all 0.9s;
+    -webkit-transition: all 0.9s;
+    transition: all 0.9s;
+    opacity: 0.7;
+  }
+  
+  .menu img {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .menu img:hover {
+    width: 100%;
+  }
+  #box1 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    flex-direction: row;
+    margin: auto;
+  }
+  .menu {
+    margin: 50px auto;
+    border: solid 2px #e0e0e0;
+    overflow: hidden;
+    width: 35%;
+    max-height: 850px;
+  }
+
+.header1 {
+  margin: 0;
+  padding: 0;
+  text-align: center;
   width: 100%;
+  height: 130px;
+  background-color: #00796b;
+  color: #ffd54f;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
+
+/*header index*/
+
+/*barre de recherche index*/
+.recherche .iconloupe {
+  background: url(http://www.larevuedekenza.fr/wp-content/themes/quarter/images/sidebar/loupe.png) no-repeat 0 0;
+}
+
+.recherche input {
+  outline: 0;
+  border: 0;
+  margin: 0;
+  height: 24px;
+  float: left;
+  display: block;
+  padding-left: 30px;
+}
+
+.recherche {
+  background-color: white;
+  height: 30px;
+  border: solid 1px grey;
+}
+
+.iconloupe {
+  float: left;
+}
+.bientot {
+  font-size: 2.1em;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  color: #ffd54f;
+  border: 2px dotted #00796b;
+  background-color: #00796b;
+  border-radius: 20px;
+  width: 33%;
+  margin: 30px auto 50px auto;
+  height: auto;
+}
+
+@keyframes dots {
+  0% {
+    margin-top: 0;
+  }
+
+  50% {
+    margin-top: -5px;
+  }
+
+  100% {
+    margin-top: 0
+  }
+}
+
+.bientot span:first-child {
+  animation: dots 1.5s infinite;
+}
+
+.bientot span:nth-child(2) {
+  animation: dots 1.5s infinite;
+  animation-delay: 0.5s;
+}
+
+.bientot span:last-child {
+  animation: dots 1.5s infinite;
+  animation-delay: 1s;
+}
+
+span {
+  margin-top: -5px;
+}
+
+/*prochainement + animation points*/
+
+/*mentions + mail animés*/
+@keyframes thing {
+  0% {
+    margin: 0
+  }
+
+  15% {
+    margin-top: -2px;
+  }
+
+  33% {
+    margin-left: -5px;
+  }
+
+  45% {
+    margin-top: 2px;
+  }
+
+  66% {
+    margin-left: 5px;
+  }
+
+  100% {
+    margin: 0;
+  }
+
+  0% {
+    margin: 0
+  }
+
+  15% {
+    margin-top: -2px;
+  }
+
+  33% {
+    margin-right: -5px;
+  }
+
+  45% {
+    margin-top: 2px;
+  }
+
+  66% {
+    margin-right: 5px;
+  }
+
+  100% {
+    margin: 0;
+  }
+}
+}
+@media screen and (max-width: 1080px){
+/*header index*/
 
 .header1 {
   text-align: center;
@@ -60,6 +238,7 @@ html {
   border: solid 2px #e0e0e0;
   width: 40%;
   overflow: hidden;
+  height: auto;
 }
 
 .menu img:hover {
@@ -190,7 +369,7 @@ span {
     margin: 0;
   }
 }
-
+}
 /*mentions + mail animés*/
 
 /*responsive index*/
