--- a/styles/partials/maquette.css
+++ b/styles/partials/maquette.css
@@ -1,51 +1,22 @@
 @charset "UTF-8";
 /*index*/
 @media screen and (max-width: 2160px) {
-  .menu img:hover {
-    width: 100%;
-    /* L'image est grossie de 15% */
-    -webkit-transform: scale(1.15);
-    /* Safari et Chrome */
-    /* Firefox */
-    /* Internet Explorer 9 */
-    /* Opera */
-    transform: scale(1.15);
-    -webkit-transition: all 0.9s;
-    transition: all 0.9s;
-    opacity: 0.7;
-  }
-  .menu img {
-    width: 100%;
-    height: 100%;
-  }
-  .menu img:hover {
-    width: 100%;
-  }
   #box1 {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
     margin: auto;
-  }
-  .menu {
-    margin: 50px auto;
-    border: solid 2px #e0e0e0;
-    overflow: hidden;
-    width: 35%;
-    max-height: 850px;
+    width: 70%;
   }
   .header1 {
-    margin: 0;
-    padding: 0;
     text-align: center;
     width: 100%;
     height: 130px;
@@ -84,6 +55,37 @@
   .iconloupe {
     float: left;
   }
+  /*barre de recherche index*/
+  /*box + zoom sur image*/
+  .menu {
+    margin: 30px auto 30px auto;
+    border: solid 2px #e0e0e0;
+    width: 40%;
+    overflow: hidden;
+    height: auto;
+  }
+  .menu img:hover {
+    width: 100%;
+    /* L'image est grossie de 15% */
+    -webkit-transform: scale(1.15);
+    /* Safari et Chrome */
+    /* Firefox */
+    /* Internet Explorer 9 */
+    /* Opera */
+    transform: scale(1.15);
+    -webkit-transition: all 0.9s;
+    transition: all 0.9s;
+    opacity: 0.7;
+  }
+  .menu img {
+    width: 100%;
+    height: 100%;
+  }
+  .menu img:hover {
+    width: 100%;
+  }
+  /*box + zoom sur image*/
+  /*prochainement + animation points*/
   .bientot {
     font-size: 2.1em;
     text-align: center;
@@ -265,20 +267,6 @@
   }
   /*barre de recherche index*/
   /*box + zoom sur image*/
-  #box1 {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    margin: auto;
-  }
   .menu {
     margin: 30px auto 30px auto;
     border: solid 2px #e0e0e0;
