--- a/styles/partials/menu1.css
+++ b/styles/partials/menu1.css
@@ -1,7 +1,13 @@
 /*menu1*/
+.bloc-page-m1 {
+  margin: 0;
+  background-color: #fff;
+  height: auto;
+}
+
 .carte-m1 {
   font-family: 'Neucha', cursive;
-  width: 95%;
+  width: 90%;
   height: auto;
   margin: auto;
   margin-bottom: 80px;
@@ -146,11 +152,15 @@ li {
   }
   #container-m1 {
     width: 100%;
-    margin: auto;
+    margin: 0;
     height: auto;
   }
   .titrem1 {
     font-size: 3em;
+  }
+  .traitm1:after {
+    -webkit-transition: none;
+    transition: none;
   }
   .prix {
     float: none;
@@ -180,7 +190,7 @@ li {
     height: 30px;
   }
   .carte-m1 {
-    width: 95%;
+    width: 100%;
     margin-bottom: 20px;
   }
   .fin {
