--- a/styles/partials/menu2.css
+++ b/styles/partials/menu2.css
@@ -1,6 +1,11 @@
 @charset "UTF-8";
 /*menu2*/
 /*englobe menu2*/
+#container-m-2 {
+  width: 100%;
+  height: auto;
+}
+
 #carte-m2 {
   font-family: 'Parisienne', cursive;
   background-color: #fdf5fe;
@@ -72,8 +77,8 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background: -webkit-gradient(linear, left top, right top, from(#c77800), color-stop(#ffa726), color-stop(#ba68c8), color-stop(#3f51b5), to(#3f51b5));
-  background: linear-gradient(to right, #c77800, #ffa726, #ba68c8, #3f51b5, #3f51b5);
+  background: -webkit-gradient(linear, left top, right top, from(#c77800), color-stop(#c77800), color-stop(#ba68c8), color-stop(#3f51b5), to(#3f51b5));
+  background: linear-gradient(to right, #c77800, #c77800, #ba68c8, #3f51b5, #3f51b5);
   mix-blend-mode: screen;
 }
 
@@ -217,9 +222,14 @@
 /*listes des plats menu2*/
 /*menu2 responsive*/
 @media (max-width: 870px) {
+  #container-m-2 {
+    width: 100%;
+    height: auto;
+    margin: 0;
+    padding: 0;
+  }
   #carte-m2 {
-    width: 95%;
-    margin: auto;
+    width: 100%;
     height: auto;
     padding-bottom: 30px;
     margin-bottom: 30px;
