--- a/styles/partials/menu2.scss
+++ b/styles/partials/menu2.scss
@@ -1,7 +1,11 @@
 /*menu2*/
 
 /*englobe menu2*/
+#container-m-2 {
+  width: 100%;
+  height: auto;
 
+}
 
 #carte-m2 {
   font-family: 'Parisienne', cursive;
@@ -60,13 +64,8 @@
   right: 0;
   bottom: 0;
   left: 0;
-<<<<<<< HEAD
-  background: -webkit-gradient(linear, left top, right bottom, from(#ffa726), color-stop(#c77800), color-stop(#ba68c8), color-stop(#3f51b5), to(#3f51b5));
-  background: linear-gradient(to right bottom, #ffa726, #c77800, #c77800, #ba68c8, #3f51b5, #3f51b5);
-=======
-  background: -webkit-gradient( linear, left bottom, right top, from(#c77800),  color-stop(#ffa726), color-stop(#ba68c8), color-stop(#3f51b5), to(#3f51b5));
-  background: linear-gradient(to right, #c77800, #ffa726, #ba68c8, #3f51b5, #3f51b5);
->>>>>>> parent of fd60c85... gradient m2 m3
+  background: -webkit-gradient(linear, left top, right top, from(#c77800), color-stop(#c77800), color-stop(#ba68c8), color-stop(#3f51b5), to(#3f51b5));
+  background: linear-gradient(to right, #c77800, #c77800, #ba68c8, #3f51b5, #3f51b5);
   mix-blend-mode: screen;
 
 }
@@ -190,10 +189,15 @@
 
 /*menu2 responsive*/
 @media (max-width: 870px) {
+  #container-m-2 {
+    width: 100%;
+    height: auto;
+    margin: 0;
+    padding: 0;
+  }
 
   #carte-m2 {
-    width: 95%;
-    margin: auto;
+    width: 100%;
     height: auto;
     padding-bottom: 30px;
     margin-bottom: 30px;
