--- a/styles/partials/menu3.css
+++ b/styles/partials/menu3.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 /*menu3*/
+#container-m-3 {
+  height: auto;
+}
+
 #carte-m3 {
   font-family: 'Kalam', cursive;
   width: 90%;
@@ -194,12 +198,17 @@
 
 /*separateurs menu3*/
 /*responsive menu3*/
+@media screen and (max-width: 1500px) {
+  .m-1 {
+    font-size: 1.8em;
+  }
+}
+
 @media screen and (max-width: 870px) {
   #carte-m3 {
-    width: 95%;
+    width: 100%;
     padding-bottom: 30px;
     height: auto;
-    margin: auto;
     margin-bottom: 30px;
   }
   .traitm3:after {
