--- a/styles/partials/menu3.scss
+++ b/styles/partials/menu3.scss
@@ -1,4 +1,7 @@
 /*menu3*/
+#container-m-3 {
+  height: auto;
+}
 
 #carte-m3 {
   font-family: 'Kalam', cursive;
@@ -53,7 +56,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background: -webkit-gradient(linear, left bottom, right top, from(#0d47a1), color-stop(#1e88e5), color-stop(#1e88e5), color-stop(#64b5f6), to(#64b5f6));
+  background: -webkit-gradient(linear, left top, right bottom, from(#0d47a1), color-stop(#1e88e5), color-stop(#1e88e5), color-stop(#64b5f6), to(#64b5f6));
   background: linear-gradient(to right, #0d47a1, #0d47a1, #1e88e5, #64b5f6, #64b5f6);
   mix-blend-mode: screen;
 }
@@ -74,7 +77,7 @@
 
 .traitm3:hover:after {
   width: 100%;
-  background: -webkit-gradient(linear, left, right, from(#0d47a1), color-stop(#0d47a1), color-stop(#1e88e5), color-stop(#64b5f6), to(#64b5f6));
+  background: -webkit-gradient(linear, left top, right top, from(#0d47a1), color-stop(#0d47a1), color-stop(#1e88e5), color-stop(#64b5f6), to(#64b5f6));
   background: linear-gradient(to right, #0d47a1, #0d47a1, #1e88e5, #64b5f6, #64b5f6);
 }
 
@@ -153,14 +156,19 @@
 /*separateurs menu3*/
 
 /*responsive menu3*/
+@media screen and (max-width: 1500px) {
+  .m-1 {
+    font-size: 1.8em;
+  }
+
+}
 
 @media screen and (max-width: 870px) {
 
   #carte-m3 {
-    width: 95%;
+    width: 100%;
     padding-bottom: 30px;
     height: auto;
-    margin: auto;
     margin-bottom: 30px;
   }
 
