--- a/styles/partials/menu4.scss
+++ b/styles/partials/menu4.scss
@@ -1,4 +1,7 @@
 /*menu4*/
+#container-m4 {
+  height: auto;
+}
 
 #carte-m4 {
   font-family: 'Dancing Script', cursive;
@@ -90,6 +93,9 @@
 
 /*responsive menu4*/
 @media screen and (max-width:870px) {
+  #container-m4 {
+    height: auto;
+  }
 
   .gradient-m4 {
     font-size: 3em;
@@ -104,9 +110,8 @@
   }
 
   #carte-m4 {
-    width: 90%;
+    width: 100%;
     height: auto;
-    margin: auto;
     padding-bottom: 30px;
     margin-bottom: 30px;
   }
