--- a/styles/partials/layout.scss
+++ b/styles/partials/layout.scss
@@ -1,9 +1,10 @@
 /*layout*/
-#container-m1 {
+body {
   width: 100%;
   max-width: 2000px;
   height: auto;
-}
+  margin: 0;
+ }
 
 /*header*/
 .header {
@@ -142,10 +143,6 @@ footer {
   .titre {
     font-size: 1em;
     margin: 0;
-  }
-
-  .header {
-    height: auto;
   }
 
   .listes {
