--- a/styles/partials/maquette.css
+++ b/styles/partials/maquette.css
@@ -1,34 +1,5 @@
 @charset "UTF-8";
 /*index*/
-/*container index*/
-html, body {
-  font-family: sans-serif;
-  width: 100%;
-  height: auto;
-  margin: 0;
-}
-
-/*container index*/
-/*header index*/
-.header1 {
-  text-align: center;
-  width: 100%;
-  height: 130px;
-  background-color: #00796b;
-  color: #ffd54f;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-/*header index*/
 /*barre de recherche index*/
 .recherche .iconloupe {
   background: url(http://www.larevuedekenza.fr/wp-content/themes/quarter/images/sidebar/loupe.png) no-repeat 0 0;
@@ -102,7 +73,6 @@ html, body {
 
 .menu img:hover {
   width: 100%;
-  height: 700px;
 }
 
 /*box + zoom sur image*/
@@ -254,15 +224,9 @@ span {
 /*mentions + mail animés*/
 /*responsive index*/
 @media screen and (max-width: 1150px) {
-  #box1 {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
   .menu {
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 500px;
   }
   .bientot {
     width: 60%;
