--- a/styles/partials/style.css
+++ b/styles/partials/style.css
@@ -1,9 +1,10 @@
 @charset "UTF-8";
 /*layout*/
-#container-m1 {
+body {
   width: 100%;
   max-width: 2000px;
   height: auto;
+  margin: 0;
 }
 
 /*header*/
@@ -186,9 +187,6 @@ footer {
     font-size: 1em;
     margin: 0;
   }
-  .header {
-    height: auto;
-  }
   .listes {
     text-align: center;
   }
@@ -238,35 +236,6 @@ footer {
 
 /*responsive layout*/
 /*index*/
-/*container index*/
-html, body {
-  font-family: sans-serif;
-  width: 100%;
-  height: auto;
-  margin: 0;
-}
-
-/*container index*/
-/*header index*/
-.header1 {
-  text-align: center;
-  width: 100%;
-  height: 130px;
-  background-color: #00796b;
-  color: #ffd54f;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-/*header index*/
 /*barre de recherche index*/
 .recherche .iconloupe {
   background: url(http://www.larevuedekenza.fr/wp-content/themes/quarter/images/sidebar/loupe.png) no-repeat 0 0;
@@ -340,7 +309,6 @@ html, body {
 
 .menu img:hover {
   width: 100%;
-  height: 700px;
 }
 
 /*box + zoom sur image*/
@@ -492,15 +460,9 @@ span {
 /*mentions + mail animés*/
 /*responsive index*/
 @media screen and (max-width: 1150px) {
-  #box1 {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
   .menu {
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 500px;
   }
   .bientot {
     width: 60%;
